Template to entropy

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -452,12 +452,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tree_to_template(tree, depth=0):\n",
-    "    if isinstance(tree, tuple) and depth<3:\n",
+    "    if isinstance(tree, tuple) and depth<2:\n",
     "        return (tree_to_template(tree[0], depth+1), tree_to_template(tree[1], depth+1))\n",
     "    \n",
     "    if isinstance(tree, tuple):\n",
@@ -480,6 +480,125 @@
     "    pickle.dump(tree2template, f)\n",
     "with open('files/template2trees.pickle', 'wb') as f:\n",
     "    pickle.dump(template2trees, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2-ways dict betweem rhythms and templates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(((p3, (p2, p2)), ((p3, p2), (p3, p3))), (((p2, p2), p3), ((p3, p2), (p2, p3))))\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "(((p3, (p2, p2)), ((p3, p2), (p3, p3))), (((p2, p2), p3), ((p3, p2), (p2, p3))))",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-222-f5c6cef4f38c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mtree\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrhythm2trees\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mrhythm\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[0mlok\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtree2template\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtree\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m         \u001b[0mtemp_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlok\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: (((p3, (p2, p2)), ((p3, p2), (p3, p3))), (((p2, p2), p3), ((p3, p2), (p2, p3))))"
+     ]
+    }
+   ],
+   "source": [
+    "rhythm2templates = dict()\n",
+    "\n",
+    "for rhythm in all_rhythms:\n",
+    "    temp_list = list()\n",
+    "    for tree in rhythm2trees[rhythm]:\n",
+    "        print(tree)\n",
+    "        lok = tree2template[tree]\n",
+    "        temp_list.append(lok)\n",
+    "        \n",
+    "    rhythm2templates[rhythm] = temp_list\n",
+    "\n",
+    "#save\n",
+    "import pickle\n",
+    "with open('files/rhythm2templates.pickle', 'wb') as f:\n",
+    "    pickle.dump(rhythm2templates, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((p2, ((p3, p3), (p3, p3))), p3)\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "((p2, ((p3, p3), (p3, p3))), p3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-236-90fc168ca093>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mtree\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtemplate2trees\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtemplate\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m         \u001b[0mlok\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtree2rhythm\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtree\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m         \u001b[0mtemp_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlok\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: ((p2, ((p3, p3), (p3, p3))), p3)"
+     ]
+    }
+   ],
+   "source": [
+    "template2rhythms = dict()\n",
+    "\n",
+    "for template in all_templates:\n",
+    "    rhythm_list = list()\n",
+    "    for tree in template2trees[template]:\n",
+    "        print(tree)\n",
+    "        lok = tree2rhythm[tree]\n",
+    "        temp_list.append(lok)\n",
+    "        \n",
+    "    template2rhythms[template] = temp_list\n",
+    "\n",
+    "#save\n",
+    "import pickle\n",
+    "with open('files/rhythm2templates.pickle', 'wb') as f:\n",
+    "    pickle.dump(rhythm2templates, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dict template to its entropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import entropy\n",
+    "template2entropy = dict()\n",
+    "\n",
+    "for template in templates:\n",
+    "    all_probs=list()\n",
+    "    for rhythm in template2rhythms[template]:\n",
+    "        all_probs.append( rhythm2prob[rhythm] )\n",
+    "    template2entropy[template] = entropy(all_probs)\n",
+    "    \n",
+    "#save\n",
+    "import pickle\n",
+    "with open('files/template2entropy.pickle', 'wb') as f:\n",
+    "    pickle.dump(template2entropy, f)"
    ]
   },
   {
