--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -632,7 +632,7 @@
     "    all_NB=list()\n",
     "    for rhythm in template2rhythms[template]:\n",
     "        all_NB.append( rhythm_to_NB(rhythm) )\n",
-    "    template2ENB[template] = np.mean(all_NB)\n",
+    "    template2ENB[template] = T.mean(all_NB)\n",
     "    \n",
     "#save\n",
     "import pickle\n",
