--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -1,21 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline for generating and comparing templates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Imports and helpers"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 566,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 1.9.4\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Imports\n",
     "import numpy as np\n",
@@ -31,11 +36,12 @@
     "from theano import function\n",
     "import theano\n",
     "\n",
-    "# helpers\n",
+    "# helpers from my files\n",
     "import sys\n",
     "sys.path.insert(0, 'helpers/')\n",
     "from tree_parser import TreeParser\n",
     "from midi import *\n",
+    "from bidict import bidict\n",
     "\n",
     "import os\n",
     "os.environ[\"PATH\"] += os.pathsep + 'C:/Program Files (x86)/Graphviz2.38/bin/'"
@@ -63,33 +69,6 @@
     "p1 = T.dscalar('p1')\n",
     "p2 = T.dscalar('p2')\n",
     "p3 = T.dscalar('p3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2-ways dictionary, not too slow...\n",
-    "class bidict(dict):\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        super(bidict, self).__init__(*args, **kwargs)\n",
-    "        self.inverse = {}\n",
-    "        for key, value in self.items():\n",
-    "            self.inverse.setdefault(value,[]).append(key) \n",
-    "\n",
-    "    def __setitem__(self, key, value):\n",
-    "        if key in self:\n",
-    "            self.inverse[self[key]].remove(key) \n",
-    "        super(bidict, self).__setitem__(key, value)\n",
-    "        self.inverse.setdefault(value,[]).append(key)        \n",
-    "\n",
-    "    def __delitem__(self, key):\n",
-    "        self.inverse.setdefault(self[key],[]).remove(key)\n",
-    "        if self[key] in self.inverse and not self.inverse[self[key]]: \n",
-    "            del self.inverse[self[key]]\n",
-    "        super(bidict, self).__delitem__(key)"
    ]
   },
   {
@@ -619,73 +598,6 @@
     "    template2ENB_f[template] = theano.function([p1, p2, p3], template2ENB[template], on_unused_input='ignore')\n",
     "    \n",
     "len(template2ENB_f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# (deprecated) Find pairs of similar templates with home-made GD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 310,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "step = 0.01\n",
-    "max_iter = 10000\n",
-    "cost = T.sqr( template2ENB[template1]-template2ENB[template2] ) + T.sqr( template2entropy[template1]-template2entropy[template2] ) + T.sqr( p1+p2+p3-1 )\n",
-    "cost_f = theano.function([p1, p2, p3], cost, on_unused_input='ignore')\n",
-    "gp1, gp2, gp3 = T.grad(cost, [p1, p2, p3]) # gradient computation\n",
-    "gp1_f, gp2_f, gp3_f = theano.function([p1, p2, p3], gp1), theano.function([p1, p2, p3], gp2), theano.function([p1, p2, p3], gp3)\n",
-    "\n",
-    "# We need this decorator function for the minimizer, since the theano cost_f functions as a non-determined number of input arguments\n",
-    "# This one concretizes the input arguments for the minimizer\n",
-    "def cost_f2(a):\n",
-    "    return cost_f(a[0], a[1], a[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 325,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "     fun: 3.6544980235567035e-26\n",
-       "     jac: array([1.49011610e-08, 1.49011610e-08, 1.00880915e-05])\n",
-       " message: 'Optimization terminated successfully.'\n",
-       "    nfev: 10\n",
-       "     nit: 2\n",
-       "    njev: 2\n",
-       "  status: 0\n",
-       " success: True\n",
-       "       x: array([1.00000000e+00, 1.54321000e-14, 3.99680289e-15])"
-      ]
-     },
-     "execution_count": 325,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from scipy.optimize import minimize\n",
-    "\n",
-    "bnds = ((0, 1), (0, 1), (0, 1)) # variable bounds\n",
-    "\n",
-    "def con(a): # function for constraint (probs sum up to 1)\n",
-    "    return a[0]+a[1]+a[2]-1\n",
-    "cons = {'type':'eq', 'fun': con}\n",
-    "\n",
-    "x0 = np.array([1/3, 1/3, 1/3])\n",
-    "\n",
-    "#minimize(cost_f2, x0)\n",
-    "minimize(cost_f2, x0, bounds=bnds, constraints=cons)"
    ]
   },
   {
