--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 570,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,13 +266,7 @@
     "    for tree in rhythm2trees[rhythm]:\n",
     "        prob_rhythm += tree2prob[tree]\n",
     "        \n",
-    "    rhythm2prob[rhythm] = prob_rhythm\n",
-    "\n",
-    "#save\n",
-    "import pickle\n",
-    "with open('files/rhythm2prob.pickle', 'wb') as f:\n",
-    "    pickle.dump(rhythm2prob, f)\n",
-    "    "
+    "    rhythm2prob[rhythm] = prob_rhythm   "
    ]
   },
   {
