Only keep the best minimum out of 7

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
@@ -925,13 +925,16 @@
     "                p_beat=p[1]\n",
     "                p_rest=p[2]\n",
     "                return ( (template2entropy_f[template1](p_split, p_beat, p_rest) - template2entropy_f[template2](p_split, p_beat, p_rest))**2\n",
-    "                        + (template2ENB_f[template1](p_split, p_beat, p_rest) - template2ENB_f[template2](p_split, p_beat, p_rest))**2 )\n",
-    "            \n",
+    "                        + (template2ENB_f[template1](p_split, p_beat, p_rest) - template2ENB_f[template2](p_split, p_beat, p_rest))**2 )           \n",
     "            \n",
     "            # Stored result of optimization in both ways in dictionary\n",
     "            template_pairs[(template1, template2)] = list()\n",
+    "            best_cost = 1000 # arbitrarily large value to be replaced by minimal cost at each iteration\n",
     "            for key in start_points:\n",
-    "                template_pairs[(template1, template2)].append( minimize(fun=cost_f, x0=start_points[key], method=\"SLSQP\", bounds=bnds, constraints=cons) )          \n",
+    "                mini = minimize(fun=cost_f, x0=start_points[key], method=\"SLSQP\", bounds=bnds, constraints=cons)\n",
+    "                if(mini.get('fun') < best_cost): # replace minimum if lower than previous minimum\n",
+    "                    template_pairs[(template1, template2)] = mini    \n",
+    "                    best_cost = mini.get('fun') # only keep the best (minimal) value out of the 7 tested\n",
     "            template_pairs[(template2, template1)] = template_pairs[(template1, template2)] # add symmetry\n",
     "            \n",
     "# Pickle save\n",
@@ -948,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +971,7 @@
     "all_losses = list()\n",
     "\n",
     "for results in template_pairs.values():\n",
-    "    all_losses.append( min(result.get('fun') for result in results) )\n",
+    "    all_losses.append( results.get('fun') )\n",
     "\n",
     "import pylab as pl\n",
     "plt.hist(all_losses, bins=np.logspace(np.log10(10e-15),np.log10(10e3), 100), log=True)  # arguments are passed to np.histogram\n",
