normalized input in optimizer

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,6 +798,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We now want to get the maximum possible entropy (if all rhythms were equiprobable) to normalize the entropy during the optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.0"
+      ]
+     },
+     "execution_count": 239,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_entropy = np.log(2**L)/np.log(2)\n",
+    "max_entropy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Template to its ENB"
    ]
   },
@@ -831,6 +859,7 @@
    "source": [
     "# Weigths for the ENB (metrical grid)\n",
     "weights = (4, 1, 2, 1, 3, 1, 2, 1)\n",
+    "max_ENB = sum(weights) # largest possible ENB value\n",
     "\n",
     "# Helper function to return the number of beats of a given rhythm\n",
     "def rhythm_to_NB(rhythm):\n",
@@ -1053,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 236,
    "metadata": {
     "scrolled": true
    },
@@ -1063,128 +1092,20 @@
      "output_type": "stream",
      "text": [
       "Iteration 1 : ((p_rest, p_beat), (p_rest, ()))\n",
-      "Iteration 2 : ((p_rest, p_beat), (p_beat, p_beat))\n",
-      "Iteration 3 : ((p_rest, ()), (p_beat, ()))\n",
-      "Iteration 4 : ((p_beat, ()), (p_rest, p_beat))\n",
-      "Iteration 5 : (p_rest, (p_beat, p_rest))\n",
-      "Iteration 6 : (p_rest, (p_rest, ()))\n",
-      "Iteration 7 : ((p_beat, p_rest), (p_beat, p_beat))\n",
-      "Iteration 8 : ((p_rest, p_rest), (p_rest, p_beat))\n",
-      "Iteration 9 : p_rest\n",
-      "Iteration 10 : ((p_beat, p_beat), (p_beat, p_rest))\n",
-      "Iteration 11 : (((), p_beat), ((), p_rest))\n",
-      "Iteration 12 : ((p_rest, p_rest), ((), p_rest))\n",
-      "Iteration 13 : ((p_beat, ()), ((), p_beat))\n",
-      "Iteration 14 : ((p_beat, p_beat), (p_beat, p_beat))\n",
-      "Iteration 15 : (((), p_beat), (p_beat, ()))\n",
-      "Iteration 16 : (((), ()), ((), ()))\n",
-      "Iteration 17 : ((p_beat, p_beat), p_rest)\n",
-      "Iteration 18 : ((p_rest, p_rest), p_rest)\n",
-      "Iteration 19 : ((p_rest, p_beat), ((), p_beat))\n",
-      "Iteration 20 : ((p_rest, ()), ((), ()))\n",
-      "Iteration 21 : (((), ()), (p_rest, p_beat))\n",
-      "Iteration 22 : (((), p_rest), p_rest)\n",
-      "Iteration 23 : ((p_beat, p_rest), ((), p_beat))\n",
-      "Iteration 24 : (p_beat, (p_beat, ()))\n",
-      "Iteration 25 : (((), p_rest), p_beat)\n",
-      "Iteration 26 : ((p_rest, p_beat), p_rest)\n",
-      "Iteration 27 : (p_beat, ((), p_rest))\n",
-      "Iteration 28 : ((p_rest, p_rest), (p_beat, p_rest))\n",
-      "Iteration 29 : ((p_beat, p_rest), (p_beat, p_rest))\n",
-      "Iteration 30 : (p_beat, (p_rest, p_rest))\n",
-      "Iteration 31 : ((p_beat, p_rest), (p_rest, ()))\n",
-      "Iteration 32 : (p_rest, (p_beat, p_beat))\n",
-      "Iteration 33 : (((), p_rest), (p_rest, p_beat))\n",
-      "Iteration 34 : ((p_rest, p_beat), (p_beat, p_rest))\n",
-      "Iteration 35 : ((p_rest, ()), ((), p_rest))\n",
-      "Iteration 36 : ((p_rest, p_rest), (p_beat, ()))\n",
-      "Iteration 37 : ((p_beat, p_beat), (p_rest, ()))\n",
-      "Iteration 38 : ((p_beat, p_beat), (p_rest, p_rest))\n",
-      "Iteration 39 : (((), p_rest), (p_beat, ()))\n",
-      "Iteration 40 : (p_beat, ((), ()))\n",
-      "Iteration 41 : ((p_rest, ()), p_rest)\n",
-      "Iteration 42 : (p_beat, (p_rest, ()))\n",
-      "Iteration 43 : (p_rest, ((), p_beat))\n",
-      "Iteration 44 : ((p_beat, ()), p_beat)\n",
-      "Iteration 45 : p_beat\n",
-      "Iteration 46 : ((p_rest, p_rest), (p_beat, p_beat))\n",
-      "Iteration 47 : ((p_rest, ()), (p_rest, ()))\n",
-      "Iteration 48 : ((p_beat, ()), (p_rest, ()))\n",
-      "Iteration 49 : (((), p_beat), (p_rest, p_rest))\n",
-      "Iteration 50 : ((p_rest, p_rest), (p_rest, p_rest))\n",
-      "Iteration 51 : (((), p_rest), (p_beat, p_beat))\n",
-      "Iteration 52 : ((p_beat, p_beat), ((), p_rest))\n",
-      "Iteration 53 : (((), p_beat), (p_beat, p_rest))\n",
-      "Iteration 54 : ((p_rest, ()), p_beat)\n",
-      "Iteration 55 : ((p_beat, ()), ((), ()))\n",
-      "Iteration 56 : ((p_beat, p_beat), (p_beat, ()))\n",
-      "Iteration 57 : (((), p_beat), (p_beat, p_beat))\n",
-      "Iteration 58 : (((), ()), ((), p_beat))\n",
-      "Iteration 59 : (((), p_rest), ((), p_rest))\n",
-      "Iteration 60 : ((p_beat, p_beat), p_beat)\n",
-      "Iteration 61 : ((p_beat, ()), p_rest)\n",
-      "Iteration 62 : ((p_rest, p_beat), ((), ()))\n",
-      "Iteration 63 : ((p_rest, ()), ((), p_beat))\n",
-      "Iteration 64 : (((), p_beat), (p_rest, p_beat))\n",
-      "Iteration 65 : ((p_beat, p_rest), ((), ()))\n",
-      "Iteration 66 : ((p_beat, ()), ((), p_rest))\n",
-      "Iteration 67 : (((), ()), (p_beat, p_rest))\n",
-      "Iteration 68 : ((p_beat, ()), (p_beat, ()))\n",
-      "Iteration 69 : ((p_beat, p_beat), ((), ()))\n",
-      "Iteration 70 : (((), p_beat), ((), p_beat))\n",
-      "Iteration 71 : (((), ()), (p_beat, p_beat))\n",
-      "Iteration 72 : (((), p_rest), (p_beat, p_rest))\n",
-      "Iteration 73 : (p_rest, p_beat)\n",
-      "Iteration 74 : ((p_rest, p_rest), p_beat)\n",
-      "Iteration 75 : (((), p_rest), (p_rest, p_rest))\n",
-      "Iteration 76 : (((), ()), p_rest)\n",
-      "Iteration 77 : ((p_rest, p_beat), (p_rest, p_beat))\n",
-      "Iteration 78 : ((p_rest, p_beat), (p_beat, ()))\n",
-      "Iteration 79 : ((p_rest, ()), (p_beat, p_beat))\n",
-      "Iteration 80 : ((p_beat, p_beat), (p_rest, p_beat))\n",
-      "Iteration 81 : (p_rest, ((), p_rest))\n",
-      "Iteration 82 : (p_rest, (p_rest, p_beat))\n",
-      "Iteration 83 : ((p_beat, p_rest), (p_beat, ()))\n",
-      "Iteration 84 : (p_beat, ((), p_beat))\n",
-      "Iteration 85 : ((p_rest, p_rest), (p_rest, ()))\n",
-      "Iteration 86 : ((p_rest, ()), (p_rest, p_rest))\n",
-      "Iteration 87 : (p_beat, (p_rest, p_beat))\n",
-      "Iteration 88 : (p_rest, ((), ()))\n",
-      "Iteration 89 : ((p_rest, p_rest), ((), p_beat))\n",
-      "Iteration 90 : ((p_rest, ()), (p_rest, p_beat))\n",
-      "Iteration 91 : (p_beat, p_beat)\n",
-      "Iteration 92 : (((), ()), (p_rest, ()))\n",
-      "Iteration 93 : ((p_beat, p_rest), p_rest)\n",
-      "Iteration 94 : (((), ()), (p_rest, p_rest))\n",
-      "Iteration 95 : (((), p_rest), ((), p_beat))\n",
-      "Iteration 96 : (p_beat, (p_beat, p_beat))\n",
-      "Iteration 97 : ((p_beat, p_rest), p_beat)\n",
-      "Iteration 98 : (p_rest, (p_rest, p_rest))\n",
-      "Iteration 99 : (p_beat, (p_beat, p_rest))\n",
-      "Iteration 100 : ((p_rest, p_beat), p_beat)\n",
-      "Iteration 101 : ((p_rest, p_beat), (p_rest, p_rest))\n",
-      "Iteration 102 : ((p_beat, p_rest), ((), p_rest))\n",
-      "Iteration 103 : ((p_beat, p_rest), (p_rest, p_beat))\n",
-      "Iteration 104 : (p_rest, (p_beat, ()))\n",
-      "Iteration 105 : (((), p_beat), p_beat)\n",
-      "Iteration 106 : (((), p_rest), (p_rest, ()))\n",
-      "Iteration 107 : ((p_rest, p_beat), ((), p_rest))\n",
-      "Iteration 108 : ((p_rest, ()), (p_beat, p_rest))\n",
-      "Iteration 109 : ((p_rest, p_rest), ((), ()))\n",
-      "Iteration 110 : (p_beat, p_rest)\n",
-      "Iteration 111 : (((), p_beat), (p_rest, ()))\n",
-      "Iteration 112 : ((p_beat, ()), (p_rest, p_rest))\n",
-      "Iteration 113 : (((), p_rest), ((), ()))\n",
-      "Iteration 114 : ((p_beat, ()), (p_beat, p_rest))\n",
-      "Iteration 115 : (((), ()), ((), p_rest))\n",
-      "Iteration 116 : ((p_beat, ()), (p_beat, p_beat))\n",
-      "Iteration 117 : ((p_beat, p_beat), ((), p_beat))\n",
-      "Iteration 118 : (((), p_beat), ((), ()))\n",
-      "Iteration 119 : (((), ()), (p_beat, ()))\n",
-      "Iteration 120 : (p_rest, p_rest)\n",
-      "Iteration 121 : (((), ()), p_beat)\n",
-      "Iteration 122 : ((p_beat, p_rest), (p_rest, p_rest))\n",
-      "Iteration 123 : (((), p_beat), p_rest)\n"
+      "Iteration 2 : ((p_rest, p_beat), (p_beat, p_beat))\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-236-ac142857ac43>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     42\u001b[0m             \u001b[0mbest_cost\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1000\u001b[0m \u001b[1;31m# arbitrarily large value to be replaced by minimal cost at each iteration\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mstart_points\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m                 \u001b[0mmini\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mminimize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfun\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcost_f\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx0\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstart_points\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"SLSQP\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbounds\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbnds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconstraints\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcons\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m                 \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmini\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'fun'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mbest_cost\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m# replace minimum if lower than previous minimum\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m                     \u001b[0mtemplate_pairs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtemplate1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtemplate2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmini\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\scipy\\optimize\\_minimize.py\u001b[0m in \u001b[0;36mminimize\u001b[1;34m(fun, x0, args, method, jac, hess, hessp, bounds, constraints, tol, callback, options)\u001b[0m\n\u001b[0;32m    607\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mmeth\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'slsqp'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    608\u001b[0m         return _minimize_slsqp(fun, x0, args, jac, bounds,\n\u001b[1;32m--> 609\u001b[1;33m                                constraints, callback=callback, **options)\n\u001b[0m\u001b[0;32m    610\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mmeth\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'trust-constr'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    611\u001b[0m         return _minimize_trustregion_constr(fun, x0, args, jac, hess, hessp,\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\scipy\\optimize\\slsqp.py\u001b[0m in \u001b[0;36m_minimize_slsqp\u001b[1;34m(func, x0, args, jac, bounds, constraints, maxiter, ftol, iprint, disp, eps, callback, **unknown_options)\u001b[0m\n\u001b[0;32m    447\u001b[0m               \u001b[0malpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mf0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mh1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mh2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mh3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mh4\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mt0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    448\u001b[0m               \u001b[0miexact\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mincons\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mireset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mitermx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mline\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 449\u001b[1;33m               n1, n2, n3)\n\u001b[0m\u001b[0;32m    450\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    451\u001b[0m         \u001b[1;31m# call callback if major iteration has incremented\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -1215,11 +1136,19 @@
     "            \n",
     "            # templates are set as global variables (since they're not to be minimized)\n",
     "            def cost_f(p):\n",
-    "                p_split=p[0]\n",
-    "                p_beat=p[1]\n",
-    "                p_rest=p[2]\n",
-    "                return ( (template2entropy_f[template1](p_split, p_beat, p_rest) - template2entropy_f[template2](p_split, p_beat, p_rest))**2\n",
-    "                        + (template2ENB_f[template1](p_split, p_beat, p_rest) - template2ENB_f[template2](p_split, p_beat, p_rest))**2 )           \n",
+    "                p_split= p[0]\n",
+    "                p_beat = p[1]\n",
+    "                p_rest = p[2]\n",
+    "                \n",
+    "                # Input normalization\n",
+    "                p_total = p[0]+p[1]+p[2]\n",
+    "                p_split_normal= p[0] / p_total\n",
+    "                p_beat_normal = p[1] / p_total\n",
+    "                p_rest_normal = p[2] / p_total\n",
+    "                \n",
+    "                return ( (template2entropy_f[template1](p_split_normal, p_beat_normal, p_rest_normal) - template2entropy_f[template2](p_split_normal, p_beat_normal, p_rest_normal))**2\n",
+    "                        + (template2ENB_f[template1](p_split_normal, p_beat_normal, p_rest_normal) - template2ENB_f[template2](p_split_normal, p_beat_normal, p_rest_normal))**2 \n",
+    "                        + 2*(p_split + p_beat + p_rest - 1)**2 )           \n",
     "            \n",
     "            # Stored result of optimization in both ways in dictionary\n",
     "            best_cost = 1000 # arbitrarily large value to be replaced by minimal cost at each iteration\n",
@@ -1295,7 +1224,6 @@
     "            ENBs_x = np.append(ENBs_x, ENB_x)\n",
     "            ENBs_y = np.append(ENBs_y, ENB_y)\n",
     "            \n",
-    "\n",
     "# Fill data other way\n",
     "color = np.append(color, color)\n",
     "\n",
@@ -1325,7 +1253,7 @@
     "plt.ylabel('ENB of second template')\n",
     "plt.colorbar()\n",
     "\n",
-    "plt.savefig(f\"graphs/loss ENB entropy\", dpi=400, bbox_inches='tight')\n",
+    "plt.savefig(f\"graphs/loss ENB entropy2\", dpi=400, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1447,7 +1375,7 @@
     "tax2.top_corner_label(\"p_beat\", fontsize=fontsize)\n",
     "\n",
     "plt.axis('off')\n",
-    "plt.savefig(\"graphs/Minima of all pairs\", dpi=400, bbox_inches='tight')\n",
+    "plt.savefig(\"graphs/Minima of all pairs2\", dpi=400, bbox_inches='tight')\n",
     "plt.plot()\n",
     "plt.show()"
    ]
