Generate rhythm from template with prob

--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,6 @@
     "    '''\n",
     "    # If depth<2 means if we're in the 3 top levels (where the template and the tree are identical)\n",
     "    if isinstance(tree, tuple) and depth<TN:\n",
-    "        print('a')\n",
     "        return prob_tree_template(tree[0], depth+1) * prob_tree_template(tree[1], depth+1)\n",
     "    \n",
     "    # If depth<2 means if we're in the 3 top levels and not splitting so we don't care about the prob here\n",
@@ -2214,7 +2213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 179,
    "metadata": {
     "scrolled": true
    },
@@ -2222,15 +2221,39 @@
     {
      "data": {
       "text/plain": [
-       "('0', '0', '0', '0', '0', '1', '1', '1')"
+       "('0', '0', '0', '0', '1', '0', '0', '1')"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import random\n",
+    "import bisect\n",
+    "from midiutil import MIDIFile\n",
+    "\n",
+    "def CDF(dictionary):\n",
+    "    '''\n",
+    "    Helper function to choose a key from a dictionary with probs as dict values\n",
+    "    '''\n",
+    "    total_prob = sum(dictionary.values())\n",
+    "    dict_to_cdf = dict()\n",
+    "    prob_sum = 0\n",
+    "    \n",
+    "    for key in dictionary:\n",
+    "        dict_to_cdf[key] = prob_sum / total_prob\n",
+    "        prob_sum += dictionary[key]\n",
+    "        \n",
+    "    new_keys = list(dict_to_cdf.keys())\n",
+    "    new_values = list(dict_to_cdf.values())\n",
+    "    \n",
+    "    choice = random.random()\n",
+    "    idx = bisect.bisect(new_values, choice)\n",
+    "    return new_keys[idx]\n",
+    "\n",
+    "\n",
     "def generate_rhythm(template1, template2):\n",
     "    '''\n",
     "    Generate a rhythm for template1, with probabilities chosen when using the pair template1-template2\n",
@@ -2247,10 +2270,54 @@
     "        rhythm_template2prob_f[rhythm](min_split, min_beat, min_rest)\n",
     "    '''\n",
     "    \n",
+    "    # SECOND TRY\n",
+    "    for tree in template2trees[template1]:\n",
+    "        local_prob = theano.function([p_split, p_beat, p_rest], prob_tree_template(tree), on_unused_input='ignore')(min_split, min_beat, min_rest)\n",
+    "        local_rhythm = tree2rhythm[tree]\n",
+    "\n",
+    "        if(local_rhythm in rhythm_template2prob_f):\n",
+    "            rhythm_template2prob_f[local_rhythm] += local_prob\n",
+    "        else:\n",
+    "            rhythm_template2prob_f[local_rhythm] = local_prob\n",
+    "        \n",
+    "    chosen_rhythm = CDF(rhythm_template2prob_f)\n",
+    "        \n",
+    "    return chosen_rhythm\n",
+    "    \n",
     "    # FAST but doesnt mind about probabilities (uniform)\n",
+    "    '''\n",
     "    return random.choice(list(possible_rhythms))\n",
+    "    '''\n",
     "\n",
     "generate_rhythm(template1, template2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def play_rhythm(rhythm):\n",
+    "     \n",
+    "    degree   = 60   # pitch\n",
+    "    track    = 0\n",
+    "    channel  = 0\n",
+    "    time     = 1    # In beats\n",
+    "    duration = 1    # In beats\n",
+    "    tempo    = 400  # In BPM\n",
+    "    volumes  = np.asarray(rhythm).astype(int).tolist()  # 0-127, as per the MIDI standard\n",
+    "\n",
+    "    MyMIDI = MIDIFile(1)  # One track, defaults to format 1 (tempo track is created automatically)\n",
+    "    MyMIDI.addTempo(track, time, tempo)\n",
+    "\n",
+    "    # Rhythm\n",
+    "    MyMIDI.addProgramChange(tracknum=0, channel=0, time=0, program = 115)\n",
+    "    for i, volume in enumerate(volumes):\n",
+    "        MyMIDI.addNote(track=0, channel=0, pitch=50, time=time + i, duration=duration, volume=volume)\n",
+    "\n",
+    "    with open(\"test.mid\", \"wb\") as output_file:\n",
+    "        MyMIDI.writeFile(output_file)   "
    ]
   },
   {
