--- a/Pipeline.ipynb
+++ b/Pipeline.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 356,
    "metadata": {
     "scrolled": true
    },
@@ -35,11 +35,15 @@
     "import theano\n",
     "\n",
     "# helpers from my files\n",
+    "import importlib\n",
+    "import rhythm_generator\n",
+    "importlib.reload(rhythm_generator)\n",
     "import sys\n",
     "sys.path.insert(0, 'helpers/')\n",
     "from tree_parser import TreeParser\n",
     "# from midi import *\n",
     "from bidict import bidict\n",
+    "from rhythm_generator import *\n",
     "\n",
     "import os\n",
     "os.environ[\"PATH\"] += os.pathsep + 'C:/Program Files (x86)/Graphviz2.38/bin/'"
@@ -2203,17 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "template1 = (p_rest,())\n",
-    "template2 = (p_beat,())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 361,
    "metadata": {
     "scrolled": true
    },
@@ -2221,84 +2215,115 @@
     {
      "data": {
       "text/plain": [
-       "('0', '0', '0', '0', '1', '0', '0', '1')"
+       "array([0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 361,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import random\n",
-    "import bisect\n",
-    "from midiutil import MIDIFile\n",
-    "\n",
-    "def CDF(dictionary):\n",
+    "def choose_rule(size, p1, p2):\n",
     "    '''\n",
-    "    Helper function to choose a key from a dictionary with probs as dict values\n",
+    "    helper function which chooses a rule (p_split p_beat p_rest) according to the probs\n",
     "    '''\n",
-    "    total_prob = sum(dictionary.values())\n",
-    "    dict_to_cdf = dict()\n",
-    "    prob_sum = 0\n",
+    "    choice = np.random.random()\n",
+    "    p3 = 1-p2-p1\n",
     "    \n",
-    "    for key in dictionary:\n",
-    "        dict_to_cdf[key] = prob_sum / total_prob\n",
-    "        prob_sum += dictionary[key]\n",
-    "        \n",
-    "    new_keys = list(dict_to_cdf.keys())\n",
-    "    new_values = list(dict_to_cdf.values())\n",
+    "    # compute p_beat and p_rest for final (leaves) level\n",
+    "    if(p2==0 and p1==1):\n",
+    "        p4 = 0.5\n",
+    "    else:\n",
+    "        p4 = p2 / (1-p1)  \n",
     "    \n",
-    "    choice = random.random()\n",
-    "    idx = bisect.bisect(new_values, choice)\n",
-    "    return new_keys[idx]\n",
-    "\n",
-    "\n",
-    "def generate_rhythm(template1, template2):\n",
-    "    '''\n",
-    "    Generate a rhythm for template1, with probabilities chosen when using the pair template1-template2\n",
-    "    '''\n",
+    "    # Not last level\n",
+    "    if(size != 1):\n",
+    "        if(choice < p1):\n",
+    "            return 1\n",
+    "        if(choice < p1+p2):\n",
+    "            return 2\n",
+    "        if(choice < p1+p2+p3):\n",
+    "            return 3\n",
     "    \n",
-    "    min_split, min_beat, min_rest = template_pairs[template1, template2][0].get('x') # get the optimal values for p_beat p_rest p_split for the pair\n",
-    "    rhythm_template2prob_f = dict() # new dictionary to handle the functional python functions  \n",
-    "    possible_rhythms = template2rhythms[template1] # get all rhythms for template1 to iterate over\n",
-    "    \n",
-    "    # TOO SLOW: rhythm_template2prob_f holds all the numerical probabilities for each rhythm to be chosen\n",
-    "    '''\n",
-    "    for rhythm in possible_rhythms:\n",
-    "        rhythm_template2prob_f[rhythm] = theano.function([p_split, p_beat, p_rest], rhythm_template2prob[rhythm, template1], on_unused_input='ignore')\n",
-    "        rhythm_template2prob_f[rhythm](min_split, min_beat, min_rest)\n",
-    "    '''\n",
-    "    \n",
-    "    # SECOND TRY\n",
-    "    for tree in template2trees[template1]:\n",
-    "        local_prob = theano.function([p_split, p_beat, p_rest], prob_tree_template(tree), on_unused_input='ignore')(min_split, min_beat, min_rest)\n",
-    "        local_rhythm = tree2rhythm[tree]\n",
-    "\n",
-    "        if(local_rhythm in rhythm_template2prob_f):\n",
-    "            rhythm_template2prob_f[local_rhythm] += local_prob\n",
+    "    #Final level (stop case)\n",
+    "    if(size == 1):\n",
+    "        if(choice < p4):\n",
+    "            return 2\n",
     "        else:\n",
-    "            rhythm_template2prob_f[local_rhythm] = local_prob\n",
-    "        \n",
-    "    chosen_rhythm = CDF(rhythm_template2prob_f)\n",
-    "        \n",
-    "    return chosen_rhythm\n",
-    "    \n",
-    "    # FAST but doesnt mind about probabilities (uniform)\n",
-    "    '''\n",
-    "    return random.choice(list(possible_rhythms))\n",
-    "    '''\n",
+    "            return 3\n",
     "\n",
-    "generate_rhythm(template1, template2)"
+    "def generate_rhythm(template1, template2, template_pairs):\n",
+    "    '''\n",
+    "    Generate a 4-measures rhythm for template1, with probabilities chosen when using the pair template1-template2\n",
+    "    ''' \n",
+    "    min_split, min_beat, min_rest = template_pairs[template1, template2][0].get('x') # get the optimal values for p_beat p_rest p_split for the pair\n",
+    " \n",
+    "    def generate_mini_rhythm(size, volume, p1, p2):\n",
+    "        '''\n",
+    "        Helper function to generate the rhythms to fit in the \"open\" p_split leaves of the template\n",
+    "        '''\n",
+    "        rhythm = np.zeros(size)   \n",
+    "\n",
+    "        # Recursion\n",
+    "        rule = choose_rule(size, p1, p2)\n",
+    "\n",
+    "        if (rule == 1):\n",
+    "            rhythm = np.append( \n",
+    "                generate_mini_rhythm(int(size/2), volume, p1, p2), \n",
+    "                generate_mini_rhythm(int(size/2), volume, p1, p2)\n",
+    "            )\n",
+    "        if (rule == 2):\n",
+    "            rhythm[0] = volume\n",
+    "\n",
+    "        return rhythm\n",
+    "\n",
+    "    def generate_rhythm_rec(template1, size=L, depth=0):   \n",
+    "        '''\n",
+    "        Helper function to generate the rhythm corresponding to what's defined in the template (top levels)\n",
+    "        '''\n",
+    "        rhythm = np.zeros(size)\n",
+    "        \n",
+    "        if isinstance(template1, tuple) and depth<TN-1: # convert the explicit template into rhythm\n",
+    "            rhythm = np.append( \n",
+    "                generate_rhythm_rec(template1[0], int(size/2), depth+1), \n",
+    "                generate_rhythm_rec(template1[1], int(size/2), depth+1)\n",
+    "            )   \n",
+    "        elif isinstance(template1, tuple): # enter the mini-tree generation process\n",
+    "            rhythm = generate_mini_rhythm(size=size, volume=1, p1=min_split, p2=min_beat)\n",
+    "    \n",
+    "        elif(template1 == p_beat): # final case when template's leaf is defined\n",
+    "            rhythm[0] = 1\n",
+    "    \n",
+    "        return rhythm\n",
+    "\n",
+    "    return np.append(generate_rhythm_rec(template1),\n",
+    "                     (generate_rhythm_rec(template1),\n",
+    "                     generate_rhythm_rec(template1),\n",
+    "                     generate_rhythm_rec(template1)))\n",
+    "\n",
+    "ok = generate_rhythm(template1, template2, template_pairs)\n",
+    "ok"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 362,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "def play_rhythm(rhythm):\n",
+    "from midiutil import MIDIFile\n",
+    "\n",
+    "def rhythm_to_midi(rhythm):\n",
     "     \n",
     "    degree   = 60   # pitch\n",
     "    track    = 0\n",
@@ -2306,18 +2331,23 @@
     "    time     = 1    # In beats\n",
     "    duration = 1    # In beats\n",
     "    tempo    = 400  # In BPM\n",
+    "    instrument = 100\n",
     "    volumes  = np.asarray(rhythm).astype(int).tolist()  # 0-127, as per the MIDI standard\n",
     "\n",
+    "    print(volumes)\n",
+    "    \n",
     "    MyMIDI = MIDIFile(1)  # One track, defaults to format 1 (tempo track is created automatically)\n",
-    "    MyMIDI.addTempo(track, time, tempo)\n",
+    "    MyMIDI.addTempo(track, time, tempo) # set the tempo onlys\n",
     "\n",
     "    # Rhythm\n",
-    "    MyMIDI.addProgramChange(tracknum=0, channel=0, time=0, program = 115)\n",
+    "    MyMIDI.addProgramChange(tracknum=0, channel=0, time=0, program = instrument)\n",
     "    for i, volume in enumerate(volumes):\n",
-    "        MyMIDI.addNote(track=0, channel=0, pitch=50, time=time + i, duration=duration, volume=volume)\n",
+    "        MyMIDI.addNote(track=0, channel=0, pitch=50, time=time + i, duration=duration, volume=127*volume)\n",
     "\n",
     "    with open(\"test.mid\", \"wb\") as output_file:\n",
-    "        MyMIDI.writeFile(output_file)   "
+    "        MyMIDI.writeFile(output_file)   \n",
+    "        \n",
+    "rhythm_to_midi(ok)"
    ]
   },
   {
